--- a/README
+++ b/README
@@ -5,4 +5,6 @@ will keep adding new ones.
 
 List of presentations:
 
-* 1202-d3js.html - D3.js (http://mbostock.github.com/d3/) overview
+* D3.js (http://mbostock.github.com/d3/) overview
+  http://dyninc.github.com/lunch-and-learn/1202-d3js.html
+
