--- a/README
+++ b/README
@@ -8,3 +8,7 @@ List of presentations:
 * D3.js (http://mbostock.github.com/d3/) overview
   http://dyninc.github.com/lunch-and-learn/1202-d3js.html
 
+* Using Git, small intro to git for Dyn engingineers
+  http://dyninc.github.com/lunch-and-learn/1203-using_git.html
+  and to git-svn workflows:
+  http://dyninc.github.com/lunch-and-learn/git_svn.html
