Fun, it's not supposed to be that bad

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ List of presentations:
 * D3.js (http://mbostock.github.com/d3/) overview
   http://dyninc.github.com/lunch-and-learn/1202-d3js.html
 
-* Using Git, small intro to git for Dyn engingineers
+* Using Git, small intro to git for Dyn engineers
   http://dyninc.github.com/lunch-and-learn/1203-using_git.html
   and to git-svn workflows:
   http://dyninc.github.com/lunch-and-learn/git_svn.html
