Adding link to Cole's presentation about 'screen'

--- a/README
+++ b/README
@@ -12,3 +12,6 @@ List of presentations:
   http://dyninc.github.com/lunch-and-learn/1203-using_git.html
   and to git-svn workflows:
   http://dyninc.github.com/lunch-and-learn/git_svn.html
+
+* Introduction to using "screen"
+  http://dyninc.github.com/lunch-and-learn/1208-screen.html
