--- a/README
+++ b/README
@@ -15,3 +15,7 @@ List of presentations:
 
 * Introduction to using "screen"
   http://dyninc.github.com/lunch-and-learn/1208-screen.html
+
+* uWSGI: New Ingredient For Your Web-Application Soup
+  http://dyninc.github.com/lunch-and-learn/1207-uwsgi.html
+
